--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,4 +25,5 @@
   "spellright.notificationClass": "warning",
   "vscodeMarkdownNotes.noteCompletionConvention": "noExtension",
   "vscodeMarkdownNotes.slugifyMethod": "github-slugger",
+  "editor.acceptSuggestionOnEnter": "off",
 }
